<resources>
    <string name="app_name">mobilna</string>
    <string name="register_account">Rejestruj konto</string>
    <string name="email">Podaj e-mail:</string>
    <string name="email_hint">email</string>
    <string name="password">Podaj hasło:</string>
    <string name="password_repeat">Powtórz hasło:</string>
    <string name="submit">ZATWIERDŹ</string>
    <string name="initial_alert">Autor 00000000000</string>
    <string name="email_invalid">Nieprawidłowy adres e-mail</string>
    <string name="passwords_differs">Hasła się różnią</string>
</resources>